test/T2/Fail/T2_illegalCharsInStr.ic
class SimpleClass {
	int simpleMethod() {
		string s = "this is an identifier";
		s = "this is an identifier";
		s = "this is an identifier";
		s = "this is an identifier";
		s = "this is an identifier";
		s = "";
		s = "";
		s = "";

		string error_1 = "this a is an error \";
		string error_2 = "\a\b";
		
		return 0;
	}
}
